--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "scripts/toolchain"]
 	path = toolchain
-	url = git@github.com:ucxl/samsung-exynos9820-toolchain.git
+	url = https://github.com/CruelKernel/samsung-exynos9820-toolchain
